--- a/index.html
+++ b/index.html
@@ -38,21 +38,21 @@
                 </div>
 
                 <a href="" class="logo">
-                    <img src="/image/logo.png" alt="logo">
+                    <img src="image/logo.png" alt="logo">
                 </a>
 
                 <div class="header__block right">
                     <div class="header__actions">
                         <a class="header__link" href="">
-                            <img src="/image/user 1.svg" alt="profile">
+                            <img src="image/user 1.svg" alt="profile">
                         </a>
 
                         <a class="header__link" href="">
-                            <img src="/image/favorite 1.svg" alt="favorite">
+                            <img src="image/favorite 1.svg" alt="favorite">
                         </a>
 
                         <a class="header__link" href="">
-                            <img src="/image/cart 1.svg" alt="cart">
+                            <img src="image/cart 1.svg" alt="cart">
                             <span class="header__link-event"></span>
                         </a>
                     </div>
@@ -83,7 +83,7 @@
     <div class="container">
         <div class="info__block">
             <div class="info__img-wrapper">
-                <img class="info__img" src="/image/info_img.jpg" alt="">
+                <img class="info__img" src="image/info_img.jpg" alt="">
             </div>
             <div class="info__item">
                 <div class="info__title">
@@ -102,7 +102,7 @@
             <div class="product__block">
 
                 <a class="products__item" href="#">
-                    <img class="product__img" src="/image/product1.png" alt="">
+                    <img class="product__img" src="image/product1.png" alt="">
                     <h3 class="products__title">Lavazza coffee</h3>
                     <div class="products__footer">
                         <div class="products__price">
@@ -110,7 +110,7 @@
                             <del>$29.99</del>
                         </div>
                         <button type="button" class="products__favorite">
-                            <img src="/image/favorite 1.svg" alt="">
+                            <img src="image/favorite 1.svg" alt="">
                         </button>
                     </div>
                 </a>
@@ -119,14 +119,14 @@
             <div class="product__block">
 
                 <a class="products__item" href="#">
-                    <img class="product__img" src="/image/product2.png" alt="">
+                    <img class="product__img" src="image/product2.png" alt="">
                     <h3 class="products__title">Lavazza coffee</h3>
                     <div class="products__footer">
                         <div class="products__price">
                             $19.99
                         </div>
                         <button type="button" class="products__favorite">
-                            <img src="/image/favorite 1.svg" alt="">
+                            <img src="image/favorite 1.svg" alt="">
                         </button>
                     </div>
                 </a>
@@ -135,24 +135,7 @@
             <div class="product__block">
 
                 <a class="products__item" href="#">
-                    <img class="product__img" src="/image/product1.png" alt="">
-                    <h3 class="products__title">Lavazza coffee</h3>
-                    <div class="products__footer">
-                        <div class="products__price">
-                            $19.99
-                            <del>$29.99</del>
-                        </div>
-                        <button type="button" class="products__favorite">
-                            <img src="/image/favorite 1.svg" alt="">
-                        </button>
-                    </div>
-                </a>
-            </div>
-
-            <div class="product__block">
-
-                <a class="products__item" href="#">
-                    <img class="product__img" src="/image/product1.png" alt="">
+                    <img class="product__img" src="image/product1.png" alt="">
                     <h3 class="products__title">Lavazza coffee</h3>
                     <div class="products__footer">
                         <div class="products__price">
@@ -160,7 +143,7 @@
                             <del>$29.99</del>
                         </div>
                         <button type="button" class="products__favorite">
-                            <img src="/image/favorite 1.svg" alt="">
+                            <img src="image/favorite 1.svg" alt="">
                         </button>
                     </div>
                 </a>
@@ -169,23 +152,7 @@
             <div class="product__block">
 
                 <a class="products__item" href="#">
-                    <img class="product__img" src="/image/product2.png" alt="">
-                    <h3 class="products__title">Lavazza coffee</h3>
-                    <div class="products__footer">
-                        <div class="products__price">
-                            $19.99
-                        </div>
-                        <button type="button" class="products__favorite">
-                            <img src="/image/favorite 1.svg" alt="">
-                        </button>
-                    </div>
-                </a>
-            </div>
-
-            <div class="product__block">
-
-                <a class="products__item" href="#">
-                    <img class="product__img" src="/image/product1.png" alt="">
+                    <img class="product__img" src="image/product1.png" alt="">
                     <h3 class="products__title">Lavazza coffee</h3>
                     <div class="products__footer">
                         <div class="products__price">
@@ -193,7 +160,40 @@
                             <del>$29.99</del>
                         </div>
                         <button type="button" class="products__favorite">
-                            <img src="/image/favorite 1.svg" alt="">
+                            <img src="image/favorite 1.svg" alt="">
+                        </button>
+                    </div>
+                </a>
+            </div>
+
+            <div class="product__block">
+
+                <a class="products__item" href="#">
+                    <img class="product__img" src="image/product2.png" alt="">
+                    <h3 class="products__title">Lavazza coffee</h3>
+                    <div class="products__footer">
+                        <div class="products__price">
+                            $19.99
+                        </div>
+                        <button type="button" class="products__favorite">
+                            <img src="image/favorite 1.svg" alt="">
+                        </button>
+                    </div>
+                </a>
+            </div>
+
+            <div class="product__block">
+
+                <a class="products__item" href="#">
+                    <img class="product__img" src="image/product1.png" alt="">
+                    <h3 class="products__title">Lavazza coffee</h3>
+                    <div class="products__footer">
+                        <div class="products__price">
+                            $19.99
+                            <del>$29.99</del>
+                        </div>
+                        <button type="button" class="products__favorite">
+                            <img src="image/favorite 1.svg" alt="">
                         </button>
                     </div>
                 </a>
@@ -207,7 +207,7 @@
         <div class="news__wrapper">
             <div class="news__block">
                 <a class="news__item">
-                    <img class="news__img" src="/image/news1.jpg" alt="">
+                    <img class="news__img" src="image/news1.jpg" alt="">
                     <div class="news__content">
                         <h3 class="news__title">Lavazza coffee</h3>
                         <p class="news__text">
@@ -219,7 +219,7 @@
 
             <div class="news__block">
                 <a class="news__item">
-                    <img class="news__img" src="/image/info_img.jpg" alt="">
+                    <img class="news__img" src="image/info_img.jpg" alt="">
                     <div class="news__content">
                         <h3 class="news__title">Lavazza coffee</h3>
                         <p class="news__text">
@@ -231,7 +231,7 @@
 
             <div class="news__block">
                 <a class="news__item">
-                    <img class="news__img" src="/image/news2.jpg" alt="">
+                    <img class="news__img" src="image/news2.jpg" alt="">
                     <div class="news__content">
                         <h3 class="news__title">Lavazza coffee</h3>
                         <p class="news__text">
@@ -247,7 +247,7 @@
             <div class="footer__wrapper">
                 <div class="footer__block">
                     <a class="footer__logo" href="#">
-                        <img src="/image/footer__logo.png" alt="">
+                        <img src="image/footer__logo.png" alt="">
                     </a>
                 </div>
                 <div class="footer__block">
