--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
     </header>
 
-    <div class="intro" style="background-image:url(/image/introIMG.jpg);">
+    <div class="intro" style="background-image:url(image/introIMG.jpg);">
         <div class="container">
             <div class="intro__wrapper">
                 <div class="intro__block">
